# Argus

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: docs.yml  release.yml
docs/: download.md  index.md
docs/.vitepress/: config.ts
docs/guide/: ai.md  arxiv.md  canvas.md  embedding-map.md  installation.md  introduction.md  library.md  quick-start.md  rag.md  reading.md  snippets.md
docs/zh/: download.md  index.md
scripts/: setup-vditor.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_manager.rs  ai_summary.rs  arxiv.rs  arxiv_scheduler.rs  cancel.rs  canvas.rs  canvas_enhance.rs  cli_manager.rs  cli_runner.rs  collections.rs  commands.rs  copilot.rs  extraction.rs  fsutil.rs  lib.rs  library.rs  llm.rs  main.rs  metadata.rs  models.rs  net.rs  ocr.rs  openreview.rs  paper.rs  path_guard.rs  rag.rs  search.rs  sections.rs  security_bookmark.rs  settings.rs  snippets.rs  token_usage.rs  url_import.rs  writing.rs
src-tauri/src/ebook/: epub.rs  fb2.rs  mobi_fmt.rs  mod.rs  txt.rs
src/assets/: main.css  themes.css
src/components/: ActivityLogModal.vue  AddSnippetModal.vue  CanvasPanel.vue  CitationGraph.vue  CitationGraphModal.vue  CollectionCascadeMenu.vue  CollectionNode.vue  EbookViewer.vue  LeftSidebar.vue  LibraryChat.vue  MermaidBlock.vue  MilkdownEditor.vue  ModelSelector.vue  PaperList.vue  PaperPicker.vue  PdfViewer.vue  (+14 more)
(+89 files in other folders)
