[package]
name = "argus"
version = "0.1.0"
description = "Argus — local-first literature management"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "Argus"
path = "src/main.rs"

[lib]
name = "argus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
aes-gcm = "0.10"
rand = "0.8"
regex = "1"
lopdf = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFArray", "CFData", "CFError", "CFString", "CFURL"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
